--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
+.weatherSection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    min-height: calc(100vh - 90px);
+}
+
 .cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .forecastCards {
