--- a/src/components/styles/WeatherCard.css
+++ b/src/components/styles/WeatherCard.css
@@ -1,13 +1,14 @@
 .card {
     text-align: center;
-    width: calc(1/3*100%);
-    max-width: 500px;
+    width: 100%;
+    max-width: 450px;
     min-width: 300px;
     font-size: 1.2rem;
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 10px;
     margin: 6px 0;
+    align-self: stretch;
 }
 
 
