--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 #root {
-  min-height: 100vh;
+  min-height: 100%;
   background-image: url("./img/background.jpg");
   background-position: bottom;
   background-repeat: no-repeat;
